Prod V2/main/default/objects/Order/fields/Back_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Back_Order_Quantity__c</fullName>
    <description>the backorder quantity of all lines</description>
    <label>Back Order Quantity</label>
    <summarizedField>OrderItem.Backorder_Quantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>