Prod V2/main/default/objects/Order/fields/Create_Order_Lines__c.field-meta.xml
<CustomField>
    <fullName>Create_Order_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to trigger automated creation of Order Lines</description>
    <label>Create Order Lines</label>
    <type>Checkbox</type>
</CustomField>