Prod V2/main/default/objects/Order/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Comes from Odoo</description>
    <label>Invoice ID</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Orders(standard)</relationshipLabel>
    <relationshipName>Orders_standard</relationshipName>
    <type>Lookup</type>
</CustomField>