Prod V2/main/default/objects/Order/fields/Linked_Revenue_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Linked_Revenue_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>field that will be automatically added when creating an order to indicate the forecast linked</description>
    <label>Linked Revenue Forecast</label>
    <referenceTo>Revenue_Forecast__c</referenceTo>
    <relationshipLabel>Orders(standard)</relationshipLabel>
    <relationshipName>Orders_standard</relationshipName>
    <type>Lookup</type>
</CustomField>