Prod V2/main/default/objects/Order/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT(MONTH(EffectiveDate))</formula>
    <label>Month</label>
    <type>Text</type>
</CustomField>