Prod V2/main/default/objects/Order/fields/Odoo_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_ID__c</fullName>
    <description>comes from Odoo</description>
    <externalId>true</externalId>
    <label>Odoo ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>