Prod V2/main/default/objects/Order/fields/Odoo_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Invoice_Id__c</fullName>
    <label>Odoo Invoice Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>