Prod V2/main/default/objects/Order/fields/Odoo_Order_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Order_Nbr__c</fullName>
    <label>Odoo Order Nbr</label>
    <length>80</length>
    <type>Text</type>
</CustomField>