Prod V2/main/default/objects/Order/fields/Order_is_in_Odoo__c.field-meta.xml
<CustomField>
    <fullName>Order_is_in_Odoo__c</fullName>
    <formula>NOT(ISBLANK(Odoo_ID__c ))</formula>
    <label>Order is in  Odoo</label>
    <type>Checkbox</type>
</CustomField>