Prod V2/main/default/objects/Order/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <formula>IF(Odoo_Order_Nbr__c &lt;&gt; &apos;&apos;,
Odoo_Order_Nbr__c,
&quot;SFO-&quot;+TEXT(YEAR(EffectiveDate))+&quot;-&quot;+OrderNumber
)</formula>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>