Prod V2/main/default/objects/Order/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Based on which package was this order created</description>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>