Prod V2/main/default/objects/Order/fields/Sent_to_Odoo__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Odoo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checkbox is true - the integrat!on to Odoo has to be triggered</description>
    <label>Sent to Odoo</label>
    <type>Checkbox</type>
</CustomField>