Prod V2/main/default/objects/Order/fields/Shipping_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipping_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>