Prod V2/main/default/objects/Order/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>comes from Odoo</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>