Prod V2/main/default/objects/Order/fields/Track_Trace__c.field-meta.xml
<CustomField>
    <fullName>Track_Trace__c</fullName>
    <formula>HYPERLINK(&apos;https://track.bpost.cloud/btr/web/#/search?itemCode=&apos;+ Tracking_Reference__c+&apos;&amp;lang=en&amp;postalCode=&apos;+ BillingPostalCode, &apos;Tracking Link&apos;)</formula>
    <label>Track &amp; Trace</label>
    <type>Text</type>
</CustomField>