Prod V2/main/default/objects/Order/fields/Tracking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Reference__c</fullName>
    <description>comes from Odoo</description>
    <label>Tracking Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>