Prod V2/main/default/objects/Order/fields/Use_Account_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Use_Account_Pricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you want to use the account price book for this order? (if left empty, you can choose the pricebook before adding products)</inlineHelpText>
    <label>Use Account Pricebook</label>
    <type>Checkbox</type>
</CustomField>