Prod V2/main/default/objects/Order/fields/User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>User_is_Owner__c</fullName>
    <formula>$User.Id   =    OwnerId</formula>
    <label>User is Owner</label>
    <type>Checkbox</type>
</CustomField>