Prod V2/main/default/objects/Order/fields/Warehouse_ID__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_ID__c</fullName>
    <description>comes from Odoo</description>
    <label>Warehouse ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>