Prod V2/main/default/objects/Order/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(YEAR(EffectiveDate))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>