Prod V2/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Invoice_ID__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Order_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>